--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
             color: red;
         }
 
+        .link {
+            color: green;
+        }
+
     </style>
     <body>
         <div class="about">
         <h1>The Galactic Republic</h1>
         <h2>Based in Coruscant</h2>
         <p>The Galactic Republic, headed by Supreme Chancellor Palpatine, provides the best security and stability to the known galaxy. The Galactic Republic includes the Senate, consisting entirely of Chancellor Palpatine, and is closely tied to the Jedi Council, which has such legendary memes as Mace Windu, Anakin Skywalker, and of course, Obi-Wan Kenobi</p>
+        </div>
+        <div class="link">
+            <a href="https://github.com/kkl0009/CS230Lab">My Repository</a>
+            <p>git@github.com:kkl0009/CS230Lab.git</p>
         </div>
         <div class="row">
             <div class="column">
